# Advanced-Programming-1-Exercise-2

./: .gitignore  CMakeLists.txt  ClassifyFlower.cpp  ClassifyFlower.h  Client.cpp  Client.h  CreateClassifiedFiles.cpp  CreateClassifiedFiles.h  DistanceCalculator.h  Flower.h  KNN.h  Main.cpp  Main.h  README.md  ReadFlowers.cpp  ReadFlowers.h  Server.cpp  Server.h  Unclassified.csvZone.Identifier  run.sh
Client/: Client.cpp  ClientFront.cpp  ClientFront.h
Server/: Server.cpp  ServerFront.cpp  ServerFront.h
